# Page-Analyzer

./: .env  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: main-check.yml
page_analyzer/: app.py  checkUrl.py  normalizeUrl.py  parseUrlData.py  parseUrldata.py  validator.py
page_analyzer/static/: styles.css
page_analyzer/templates/: index.html
page_analyzer/templates/pages/: index.html
page_analyzer/templates/url/: index.html
page_analyzer/templates/urls/: index.html
