[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["NikolayZemelko <zemelko1989@gmail.com>"]
readme = "README.md"
packages = [{include = 'page_analyzer'}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
flask = "^2.2.3"
python-dotenv = "^1.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
