[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["NikolayZemelko <zemelko1989@gmail.com>"]
readme = "README.md"
packages = [{include = 'page_analyzer'}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
flask = "^2.2.3"
python-dotenv = "^1.0.0"
flake8 = "^6.0.0"
jinja2 = "^3.1.2"
pytest = "^7.3.0"
psycopg2-binary = "^2.9.6"
validators = "^0.20.0"
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
